<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.FilterFragment">

    <TextView
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_filter"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/title_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_status"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_alive"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dead"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_unknown"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textSize="14sp" />

        </com.google.android.material.chip.ChipGroup>
        <TextView
            android:id="@+id/txt_title_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_human"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_humanoid"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humanoid"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_alein"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot"
                android:textSize="14sp" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_robot"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal"
                android:textSize="14sp" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_animal"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alien"
                android:textSize="14sp" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cronenberg"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cronenberg"
                android:textSize="14sp" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_poopybutthole"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poopybutthole"
                android:textSize="14sp" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mythological_creature"
                style="@style/CostumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mythological_creature"
                android:textSize="14sp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_gender"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiogroup_gender"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkbox_female"
                style="@style/CostumRadioButton"
                android:layout_marginStart="0dp"
                android:background="@drawable/checkbox_female_selector"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/checkbox_male"
                style="@style/CostumRadioButton"
                android:background="@drawable/checkbox_male_selector"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/checkbox_genderless"
                style="@style/CostumRadioButton"
                android:background="@drawable/checkbox_genderless_selector"
                android:text="@string/genderless" />

            <RadioButton
                android:id="@+id/checkbox_unknown"
                style="@style/CostumRadioButton"
                android:background="@drawable/checkbox_unknown_selector"
                android:text="@string/unknown" />

        </RadioGroup>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_make_filter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_button"
        android:text="@string/title_btn_apply"
        android:textColor="@color/yellow"
        app:backgroundTint="@null" />

</LinearLayout>