<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.CharacterDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/details_bacground"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003">

        <TextView
            android:id="@+id/episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_episodes"
            style="@style/TextColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@+id/txt_titulo_origin"
            app:layout_constraintTop_toBottomOf="@+id/character_gender"
            app:layout_constraintVertical_bias="0.23000002" />

        <TextView
            android:id="@+id/character_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/episodes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toEndOf="@+id/episodes"
            app:layout_constraintTop_toTopOf="@+id/episodes"
            tools:text="42" />

        <TextView
            android:id="@+id/character_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_specie"
            tools:text="Genderless" />

        <TextView
            android:id="@+id/txt_titulo_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_origin"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.81" />

        <TextView
            android:id="@+id/character_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            style="@style/TextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/txt_titulo_origin"
            app:layout_constraintTop_toBottomOf="@+id/txt_titulo_origin"
            tools:text="Genetic experiment" />

        <TextView
            android:id="@+id/txt_titul_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_location"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/character_origin"
            app:layout_constraintTop_toBottomOf="@+id/character_origin" />

        <TextView
            android:id="@+id/character_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            style="@style/TextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/txt_titul_location"
            app:layout_constraintTop_toBottomOf="@+id/txt_titul_location"
            tools:text="Testicle Monster Dimension" />

        <TextView
            android:id="@+id/character_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.064"
            tools:text="Unknown" />


        <ImageView
            android:id="@+id/img_character"
            android:layout_width="220dp"
            android:layout_height="220dp"
            app:layout_constraintBottom_toTopOf="@+id/character_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_status"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/character_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:maxLines="2"
            android:textSize="20sp"
            style="@style/TextColor"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_character"
            tools:text="Abradolf Lincler" />

        <TextView
            android:id="@+id/character_specie"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_name"
            tools:text="HUMAN" />

        <TextView
            android:id="@+id/charater_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.75"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>